--- a/mandelbulber2/qt/image_save_dialog.ui
+++ b/mandelbulber2/qt/image_save_dialog.ui
@@ -312,14 +312,6 @@
             <property name="spacing">
              <number>2</number>
             </property>
-            <item row="0" column="0" colspan="3">
-             <widget class="QLabel" name="label_rerender_required_info">
-              <property name="text">
-               <string>Following channels are only rendered on demand
-and will only be present after enabling and re-render.</string>
-              </property>
-             </widget>
-            </item>
             <item row="1" column="0">
              <widget class="QLabel" name="label_image_channel_optional">
               <property name="text">
@@ -327,48 +319,8 @@ and will only be present after enabling and re-render.</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="1">
-             <widget class="QLabel" name="label_image_quality_optional">
-              <property name="text">
-               <string>Quality</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="2">
-             <widget class="QLabel" name="label_image_postfix_optional">
-              <property name="text">
-               <string>Postfix</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="0">
-             <widget class="MyCheckBox" name="checkBox_normal_enabled">
-              <property name="text">
-               <string>Surface Normal</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="1">
-             <widget class="MyComboBox" name="comboBox_normal_quality">
-              <item>
-               <property name="text">
-                <string>8 bit</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>16 bit</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>32 bit</string>
-               </property>
-              </item>
-             </widget>
-            </item>
-            <item row="2" column="2">
-             <widget class="MyLineEdit" name="text_normal_postfix">
+            <item row="4" column="2">
+             <widget class="MyLineEdit" name="text_world_postfix">
               <property name="text">
                <string/>
               </property>
@@ -381,36 +333,10 @@ and will only be present after enabling and re-render.</string>
               </property>
              </widget>
             </item>
-            <item row="3" column="1">
-             <widget class="MyComboBox" name="comboBox_specular_quality">
-              <item>
-               <property name="text">
-                <string>8 bit</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>16 bit</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>32 bit</string>
-               </property>
-              </item>
-             </widget>
-            </item>
-            <item row="3" column="2">
-             <widget class="MyLineEdit" name="text_specular_postfix">
+            <item row="6" column="0">
+             <widget class="MyCheckBox" name="checkBox_normalWorld_enabled">
               <property name="text">
-               <string/>
-              </property>
-             </widget>
-            </item>
-            <item row="4" column="0">
-             <widget class="MyCheckBox" name="checkBox_world_enabled">
-              <property name="text">
-               <string>World</string>
+               <string>World Normal</string>
               </property>
              </widget>
             </item>
@@ -433,8 +359,103 @@ and will only be present after enabling and re-render.</string>
               </item>
              </widget>
             </item>
-            <item row="4" column="2">
-             <widget class="MyLineEdit" name="text_world_postfix">
+            <item row="7" column="0">
+             <widget class="MyCheckBox" name="checkBox_shadow_channel_enabled">
+              <property name="text">
+               <string>Shadows</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="2">
+             <widget class="MyLineEdit" name="text_specular_postfix">
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="2">
+             <widget class="QLabel" name="label_image_postfix_optional">
+              <property name="text">
+               <string>Postfix</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="0">
+             <widget class="MyCheckBox" name="checkBox_normal_enabled">
+              <property name="text">
+               <string>Surface Normal</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QLabel" name="label_image_quality_optional">
+              <property name="text">
+               <string>Quality</string>
+              </property>
+             </widget>
+            </item>
+            <item row="5" column="2">
+             <widget class="MyLineEdit" name="text_diffuse_postfix">
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item row="6" column="1">
+             <widget class="MyComboBox" name="comboBox_normalWorld_quality">
+              <item>
+               <property name="text">
+                <string>8 bit</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>16 bit</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>32 bit</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="0" column="0" colspan="3">
+             <widget class="QLabel" name="label_rerender_required_info">
+              <property name="text">
+               <string>Following channels are only rendered on demand
+and will only be present after enabling and re-render.</string>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="0">
+             <widget class="MyCheckBox" name="checkBox_world_enabled">
+              <property name="text">
+               <string>World</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="1">
+             <widget class="MyComboBox" name="comboBox_normal_quality">
+              <item>
+               <property name="text">
+                <string>8 bit</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>16 bit</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>32 bit</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="6" column="2">
+             <widget class="MyLineEdit" name="text_normalWorld_postfix">
               <property name="text">
                <string/>
               </property>
@@ -466,22 +487,8 @@ and will only be present after enabling and re-render.</string>
               </item>
              </widget>
             </item>
-            <item row="5" column="2">
-             <widget class="MyLineEdit" name="text_diffuse_postfix">
-              <property name="text">
-               <string/>
-              </property>
-             </widget>
-            </item>
-            <item row="6" column="0">
-             <widget class="MyCheckBox" name="checkBox_normalWorld_enabled">
-              <property name="text">
-               <string>World Normal</string>
-              </property>
-             </widget>
-            </item>
-            <item row="6" column="1">
-             <widget class="MyComboBox" name="comboBox_normalWorld_quality">
+            <item row="3" column="1">
+             <widget class="MyComboBox" name="comboBox_specular_quality">
               <item>
                <property name="text">
                 <string>8 bit</string>
@@ -499,8 +506,67 @@ and will only be present after enabling and re-render.</string>
               </item>
              </widget>
             </item>
-            <item row="6" column="2">
-             <widget class="MyLineEdit" name="text_normalWorld_postfix">
+            <item row="2" column="2">
+             <widget class="MyLineEdit" name="text_normal_postfix">
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item row="8" column="0">
+             <widget class="MyCheckBox" name="checkBox_gi_channel_enabled">
+              <property name="text">
+               <string>Global illumination</string>
+              </property>
+             </widget>
+            </item>
+            <item row="7" column="1">
+             <widget class="MyComboBox" name="comboBox_shadow_channel_quality">
+              <item>
+               <property name="text">
+                <string>8 bit</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>16 bit</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>32 bit</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="8" column="1">
+             <widget class="MyComboBox" name="comboBox_gi_channel_quality">
+              <item>
+               <property name="text">
+                <string>8 bit</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>16 bit</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>32 bit</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="7" column="2">
+             <widget class="MyLineEdit" name="text_shadow_channel_postfix">
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item row="8" column="2">
+             <widget class="MyLineEdit" name="text_gi_channel_postfix">
               <property name="text">
                <string/>
               </property>
